# learncrafted

./: README.md
backend/: achievements.csv  alembic.ini  badge.csv  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0033b335e1ef_.py  2c4702143999_.py  3e16f091085b_.py  497911334019_.py  4bd84cd9eeab_.py  4e4fc62cfebf_.py  56cbfe15dd39_.py  572e7d4a5479_.py  71f9195f47eb_.py  7b4f2f2784fe_.py  806827d31c71_.py  8d3536885e36_.py  c000646a3582_.py  c39715ec83f7_.py  c6c142dbc581_.py  d8b9a1b9d448_.py  dec9147bdec8_.py  ec8ca72b7db8_.py  ff4eb76a5791_.py
backend/backend/: app.py
backend/backend/api/: deps.py
backend/backend/api/v1/: __init__.py
backend/backend/api/v1/endpoints/: auth.py  badges.py  events.py  users.py
backend/backend/core/: security.py  settings.py  snowflake.py
backend/backend/db/: base.py  session.py
backend/backend/models/: achievement.py  badge.py  event.py  progress.py  user.py
backend/backend/schemas/: __init__.py  auth.py  badges.py  events.py  token.py  users.py
backend/backend/tasks/: __init__.py  tasks.py
website/: package-lock.json  package.json  tailwind.config.js
website/app/: globals.css  layout.tsx
website/app/(auth)/: layout.tsx
website/app/(main)/: layout.tsx  page.tsx
website/components/: GoldButton.tsx  Logo.tsx  Profile.tsx  ShareButton.tsx  navbar.tsx
website/components/ui/: card.tsx
website/hooks/requests/: useBuyBadge.ts  useCreateEvent.ts  useDeleteEvent.ts  useGetMe.ts  useLogin.ts  useLogout.ts  useRegister.ts
website/models/: badge.ts  event.ts  user.ts
(+11 files in other folders)
