[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Agnirudra Sil <agnirudra.sil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = {extras = ["mypy"], version = "^2.0.22"}
pydantic-settings = "^2.0.3"
psycopg2 = "^2.9.9"
alembic = "^1.12.0"
passlib = "^1.7.4"
argon2-cffi = "^23.1.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
python-jose = "^3.3.0"
celery = "^5.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
